# StudApp---Python

./: .gitignore  authenticate.py  config.py  database.py  main.py  models.py  pyproject.toml  schemas.py
alembic/versions/: 3eef65ca8076_initial_schema.py  c770958686f8_add_likes_to_replies.py  e5523b80dadb_add_likes_to_questions.py
frontend/: index.html  layout.html
routers/: section.py  users.py
